# higgs-audio

./: .gitignore  download_models.py  generation.py  main.py  minimal.py  minimal_offline.py  pyproject.toml  test_audio.py
scene_prompts/: quiet_indoor.txt
